--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <script type="text/javascript">
     // detect if on mobile or not.
     if (detectMobile()){
-      alert("This demo is wonky on mobile - proceed at your own risk!");
+      alert("This demo probably won't work on mobile");
     }
 
     // chrome detection
